--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,6 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@flowable/work-scripts": "3.13.10",
-    "@flowable/work": "3.13.10",
-    "@flowable/forms": "3.13.10",
-    "@flowable/forms-work": "3.13.10",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
@@ -46,12 +43,12 @@
     "sass-loader": "^13.2.0",
     "storybook-addon-mock": "^3.2.0",
     "typescript": "^4.9.5",
-    "cpr": "^3.0.1",
-    "rimraf": "^3.0.2"
+    "cpr": "^3.0.1"
   },
   "dependencies": {
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "pigeon-maps": "^0.21.3"
   },
   "compilerOptions": {
     "jsx": "react",
