--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,16 +4,17 @@
   "scripts": {
     "storybook": "start-storybook -p 6006",
     "build-storybook": "build-storybook",
-    "dev": "npm run dev-standard && npm run dev-suite",
+    "build": "npm run dev-standard && npm run dev-suite",
+
     "dev-standard": "rimraf dist && npm run build-standard && npm run copy-to-work",
     "build-standard": "npm run clean-work-folder && rimraf dist && rollup -c --environment BUILD:production --environment BUILDTYPE:standard\"",
-    "build-suite": "npm run clean-design-folder && rimraf dist-demosuite && rollup -c --environment BUILD:production --environment BUILDTYPE:suite",
+    "build-suite": "npm run clean-design-folder && rimraf dist-training && rollup -c --environment BUILD:production --environment BUILDTYPE:suite",
     "create-folders": "mkdirp ./dist && mkdirp ../src/main/resources/static/ext",
     "clean-work-folder": "rimraf ../training-handson-work/src/main/resources/static/ext && mkdirp ../training-handson-work/src/main/resources/static/ext/",
-    "clean-design-folder": "rimraf ../training-handson-design/src/main/resources/public/js/flowable-forms-demosuite/ && mkdirp ../training-handson-design/src/main/resources/public/js/flowable-forms-demosuite/",
+    "clean-design-folder": "rimraf ../training-handson-design/src/main/resources/public/js/flowable-forms-training/ && mkdirp ../training-handson-design/src/main/resources/public/js/flowable-forms-training/",
     "dev-suite": "rimraf dist-suite && npm run build-suite && npm run copy-to-design",
     "copy-to-work": "cpx ./dist/**/* ../training-handson-work/src/main/resources/static/ext",
-    "copy-to-design": "cpx  ./dist-suite/**/* ../training-handson-design/src/main/resources/public/js/flowable-forms-demosuite/"
+    "copy-to-design": "cpx  ./dist-suite/**/* ../training-handson-design/src/main/resources/public/js/flowable-forms-training/"
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
