--- a/frontend/package.json
+++ b/frontend/package.json
@@ -48,6 +48,11 @@
     "sass-loader": "^13.2.0",
     "cpr": "^3.0.1"
   },
+  "dependencies": {
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "pigeon-maps": "^0.21.3"
+  },
   "compilerOptions": {
     "jsx": "react",
     "module": "esNext",
