--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,9 @@
   "devDependencies": {
     "@babel/core": "^7.19.6",
     "@flowable/work-scripts": "3.13.10",
+    "@flowable/work": "3.13.10",
+    "@flowable/forms": "3.13.10",
+    "@flowable/forms-work": "3.13.10",
     "@storybook/addon-actions": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
     "@storybook/addon-interactions": "^6.5.16",
