--- a/frontend/package.json
+++ b/frontend/package.json
@@ -46,7 +46,8 @@
     "sass-loader": "^13.2.0",
     "storybook-addon-mock": "^3.2.0",
     "typescript": "^4.9.5",
-    "cpr": "^3.0.1"
+    "cpr": "^3.0.1",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "react": "17.0.2",
