--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
+    "@babel/preset-typescript": "^7.19.6",
     "@flowable/work-scripts": "3.13.10",
     "@flowable/work": "3.13.10",
     "@flowable/forms": "3.13.10",
