Update to 3.16 and simplify setup

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,10 +2,9 @@
   "name": "frontend",
   "version": "1.0.0",
   "scripts": {
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build",
     "build": "npm run dev-standard && npm run dev-suite",
-
     "dev-standard": "rimraf dist && npm run build-standard && npm run copy-to-work",
     "build-standard": "npm run clean-work-folder && rimraf dist && rollup -c --environment BUILD:production --environment BUILDTYPE:standard\"",
     "build-suite": "npm run clean-design-folder && rimraf dist-training && rollup -c --environment BUILD:production --environment BUILDTYPE:suite",
@@ -18,20 +17,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.19.6",
-    "@babel/preset-typescript": "^7.19.6",
-    "@flowable/work-scripts": "3.13.10",
-    "@flowable/work": "3.13.10",
-    "@flowable/forms": "3.13.10",
-    "@flowable/forms-work": "3.13.10",
-    "@storybook/addon-actions": "^6.5.16",
-    "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-interactions": "^6.5.16",
-    "@storybook/addon-links": "^6.5.16",
-    "@storybook/addon-storysource": "^6.5.16",
-    "@storybook/builder-webpack5": "^6.5.16",
-    "@storybook/manager-webpack5": "^6.5.16",
-    "@storybook/react": "^6.5.16",
-    "@storybook/testing-library": "^0.0.13",
+    "@flowable/work-scripts": "3.16.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "storybook": "^8.2.6",
+    "typescript": "5.5.4",
     "babel-loader": "^9.1.2",
     "concurrently": "^7.6.0",
     "cpx": "^1.5.0",
@@ -43,16 +33,20 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "@rollup/plugin-replace": "^5.0.2",
     "@rollup/plugin-typescript": "^11.1.1",
+    "@chromatic-com/storybook": "^1.6.1",
+    "@storybook/addon-essentials": "^8.2.6",
+    "@storybook/addon-interactions": "^8.2.6",
+    "@storybook/addon-links": "^8.2.6",
+    "@storybook/addon-onboarding": "^8.2.6",
+    "@storybook/blocks": "^8.2.6",
+    "@storybook/react": "^8.2.6",
+    "@storybook/react-vite": "^8.2.6",
+    "@storybook/test": "^8.2.6",
+    "storybook-addon-mock": "^5.0.0",
+
     "sass": "^1.58.3",
     "sass-loader": "^13.2.0",
-    "storybook-addon-mock": "^3.2.0",
-    "typescript": "^4.9.5",
-    "cpr": "^3.0.1",
-    "rimraf": "^3.0.2"
-  },
-  "dependencies": {
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "cpr": "^3.0.1"
   },
   "compilerOptions": {
     "jsx": "react",
