--- a/training-handson-design/src/main/resources/application.properties
+++ b/training-handson-design/src/main/resources/application.properties
@@ -16,11 +16,11 @@ management.endpoint.health.show-details=ALWAYS
 # Pretty-print JSON responses
 spring.jackson.serialization.indent_output=true
 
-flowable.common.app.idm-url=http://localhost:8090
-flowable.common.app.idm-admin.user=admin
-flowable.common.app.idm-admin.password=test
+flowable.design.user-store.password=test
+flowable.design.remote.idm-url=http://localhost:8090
+flowable.design.remote.authentication.user=admin
+flowable.design.remote.authentication.password=test
 
-flowable.modeler.app.db-store-enabled=false
-flowable.modeler.app.deployment-api-url=http://localhost:8090/app-api
-flowable.modeler.app.undeployment-api-url=http://localhost:8090/platform-api/app-deployments
-
+flowable.design.db-store-enabled=false
+flowable.design.deployment-api-url=http://localhost:8090/app-api
+flowable.design.undeployment-api-url=http://localhost:8090/platform-api/app-deployments
