Add translation draft

--- a/training-handson-design/src/main/resources/application.properties
+++ b/training-handson-design/src/main/resources/application.properties
@@ -24,3 +24,6 @@ flowable.design.remote.authentication.password=test
 flowable.design.db-store-enabled=false
 flowable.design.deployment-api-url=http://localhost:8090/app-api
 flowable.design.undeployment-api-url=http://localhost:8090/platform-api/app-deployments
+
+flowable.design.primary-language-code=en
+flowable.design.secondary-language-codes=de_de,it_it
