--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,8 +6,8 @@
     "build-storybook": "storybook build",
     "build": "npm run dev-standard && npm run dev-suite",
     "dev-standard": "rimraf dist && npm run build-standard && npm run copy-to-work",
-    "build-standard": "npm run clean-work-folder && rimraf dist && rollup -c --environment BUILD:production --environment BUILDTYPE:standard\"",
-    "build-suite": "npm run clean-design-folder && rimraf dist-training && rollup -c --environment BUILD:production --environment BUILDTYPE:suite",
+    "build-standard": "npm run clean-work-folder && rimraf dist && mkdirp ./dist && rollup -c --environment BUILD:production --environment BUILDTYPE:standard",
+    "build-suite": "npm run clean-design-folder && rimraf dist-suite && mkdirp ./dist-suite && rollup -c --environment BUILD:production --environment BUILDTYPE:suite",
     "create-folders": "mkdirp ./dist && mkdirp ../src/main/resources/static/ext",
     "clean-work-folder": "rimraf ../training-handson-work/src/main/resources/static/ext && mkdirp ../training-handson-work/src/main/resources/static/ext/",
     "clean-design-folder": "rimraf ../training-handson-design/src/main/resources/public/js/flowable-forms-training/ && mkdirp ../training-handson-design/src/main/resources/public/js/flowable-forms-training/",
